Spelling and renaming pass